--- a/src/Header.css
+++ b/src/Header.css
@@ -1,8 +1,8 @@
 /* Header.css */
 
 header {
-    background-color: #333;
-    color: white;
+    background-color: #fffaf5;
+    color: black; /* Changed to black */
     padding: 20px;
     text-align: center;
     font-family: Arial, sans-serif;
@@ -11,6 +11,7 @@ header {
 header h1 {
     margin: 0;
     font-size: 2.5em;
+    
 }
 
 nav {
@@ -28,7 +29,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: black; /* Changed to black */
     text-decoration: none;
     font-size: 1.2em;
 }
