--- a/src/Header.css
+++ b/src/Header.css
@@ -2,8 +2,8 @@
 
 header {
     background-color: #fffaf5;
-    color: black; /* Changed to black */
-    padding: 20px;
+    color: black; 
+    padding: 15px;
     text-align: center;
     font-family: Arial, sans-serif;
 }
